# abcd-rs

./: .gitignore  Cargo.toml  Cross.toml  DEVELOP.md  LICENSE  README.md  TODO.md  codecov.yml
.github/workflows/: ci.yml  vendor-sync.yml
abcd-cli/: Cargo.toml
abcd-cli/src/: main.rs
abcd-decompiler/: Cargo.toml
abcd-decompiler/src/: decode.rs  expr_recovery.rs  js_emitter.rs  lib.rs  structuring.rs
abcd-file/: Cargo.toml  TODO.md
abcd-file-sys/: Cargo.toml  README.md  build.rs  vendor-sync-files.yml  vendor-sync.rb
abcd-file-sys/bridge/: codegen_init.rb  file_bridge.cpp  file_bridge.h  file_impl.cpp
abcd-file-sys/bridge/shim/: file.h  file_format_version.h  pgo.h  platform_compat.h  securec.h  source_lang_enum.h  type.h  vendor_fixups.h  zlib.h
abcd-file-sys/bridge/shim/os/: file.h  filesystem.h  mem.h
abcd-file-sys/bridge/shim/utils/: hash.h  logger.h  utf.h
abcd-file-sys/src/: lib.rs
abcd-file/src/: annotation.rs  builder.rs  class.rs  code.rs  debug.rs  debug_info.rs  error.rs  field.rs  index.rs  lib.rs  literal.rs  method.rs  modifiers.rs  module.rs  mutf8.rs  proto.rs  sys.rs  types.rs  version.rs  writer.rs
abcd-file/src/util/: leb128.rs  mod.rs  mutf8.rs
abcd-ir/: Cargo.toml  DEVELOP.md
abcd-ir/src/: cfg.rs  expr.rs  instruction.rs  lib.rs  stmt.rs
abcd-isa/: Cargo.toml  DEVELOP.md  README.md  build.rs
abcd-isa-sys/: Cargo.toml  DEVELOP.md  README.md  build.rs  vendor-sync-files.yml  vendor-sync.rb
abcd-isa-sys/bridge/: isa_bridge.cpp  isa_bridge.h
abcd-isa-sys/bridge/shim/: file.h  platform_compat.h  securec.h
abcd-isa-sys/bridge/shim/utils/: const_value.h
abcd-isa-sys/src/: lib.rs
abcd-isa-sys/templates/: bytecode.rs.erb  isa_bridge_emit_dispatch.h.erb  isa_bridge_tables.h.erb
abcd-isa/bridge/: bytecode_emitter_wrapper.cpp  isa_bridge.cpp  isa_bridge.h
abcd-isa/bridge/shim/: bytecode_emitter_shim.h  bytecode_instruction-inl.h  bytecode_instruction.h  file.h  file_shim.h
abcd-isa/src/: decoder.rs  emitter.rs  lib.rs  version.rs
abcd-isa/templates/: isa_bridge_emitter.h.erb  isa_bridge_emitter_decl.h.erb  isa_bridge_tables.h.erb
abcd-isa/tests/: bytecode.rs  decode_errors.rs  emitter_formats.rs  emitter_roundtrip.rs  encode_errors.rs  imm_boundaries.rs  long_jumps.rs  opcode_coverage.rs  roundtrip.rs  version.rs
abcd-isa/tests/common/: mod.rs
abcd-parser/: Cargo.toml
abcd-parser/src/: annotation.rs  class.rs  debug_info.rs  header.rs  index.rs  leb128.rs  lib.rs  literal.rs  module_record.rs  mutf8.rs  string_table.rs
