[workspace]
resolver = "2"
members = [
    "abcd-isa",
    "abcd-parser",
    "abcd-ir",
    "abcd-decompiler",
    "abcd-cli",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
memmap2 = "0.9"
log = "0.4"
env_logger = "0.11"

abcd-isa = { path = "abcd-isa" }
abcd-parser = { path = "abcd-parser" }
abcd-ir = { path = "abcd-ir" }
abcd-decompiler = { path = "abcd-decompiler" }
