[package]
name = "abcd-cli"
edition.workspace = true
version.workspace = true

[[bin]]
name = "abcd"
path = "src/main.rs"

[dependencies]
abcd-file = { workspace = true }
abcd-decompiler = { workspace = true }
abcd-ir = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
